[gd_scene load_steps=2 format=3 uid="uid://jnsgqm42lhci"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_60mvl"]

[node name="PCPlayerScene" type="PanelContainer" groups=["player_grup"]]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_60mvl")

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer2/PanelContainer2"]
layout_mode = 2

[node name="Nom" type="Label" parent="VBoxContainer2/PanelContainer2/VBoxContainer"]
layout_mode = 2
text = "player"
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer2/PanelContainer2/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 1
show_percentage = false

[node name="ValorMoral" type="Label" parent="VBoxContainer2/PanelContainer2/VBoxContainer"]
layout_mode = 2
text = "valor"
horizontal_alignment = 1

[node name="Timer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
